[project]
name = "volumenetwork"
version = "0.1.0"
description = "An API for use in the word game Volumes"
authors = [
    {name = "Alí Sinisterra",email = "haidarconh@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false