[project]
name = "volumenetwork"
version = "0.1.0"
description = "An API for use in the word game Volumes"
authors = [
    {name = "Alí Sinisterra",email = "haidarconh@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "spacy (>=3.8.7,<4.0.0)",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0.tar.gz",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0.tar.gz"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false